--- a/Papers/ICMC2009-dbap/icmc2009-dbapShort.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbapShort.tex
@@ -95,7 +95,7 @@
 % TODO: Tim notes the use of the phrase "in terms of" a lot in this paper.  Too much.  This terminology should be limited to mathematical descriptions, and not aesthetic or perceptual issues.
 
 \begin{abstract}
-Most common techniques for spatialization require the listener to be positioned at a ``sweet spot'' surrounded by loudspeakers. For practical concert, stage and installation applications such layouts may not be undesirable. Distance-Based Amplitude Panning (DBAP) offers an alternative panning based spatialization method where no assumptions are made concerning the layout of the speaker array nor the position of the listener.  DBAP is implemented both as an external for Max/MSP and as a module for the Jamoma framework.
+Most common techniques for spatialization require the listener to be positioned at a ``sweet spot'' surrounded by loudspeakers. For practical concert, stage and installation applications such layouts may not be desirable. Distance-Based Amplitude Panning (DBAP) offers an alternative panning based spatialization method where no assumptions are made concerning the layout of the speaker array nor the position of the listener.  DBAP is implemented both as an external for Max/MSP and as a module for the Jamoma framework.
 \end{abstract}
 
 
@@ -118,9 +118,9 @@ Multichannel and surround sound reproduction is getting common, for consumer app
 
 Wave field synthesis (WFS) and Virtual Microphone Control (ViMiC) \cite{Peters:2008vimic} are noticeable exceptions to the aforementioned ``sweet spot'' restriction.
 
-WFS reproduces signals in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}. Due to the high number of loudspeakers required, WFS might be impractical to use for financial reasons and time constraints unless one is working on a site where a permanent setup for wave field synthesis is installed.
+WFS reproduces signals in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}. Due to the high number of loudspeakers required, WFS might be impractical to use for financial reasons and time constraints unless one is working on a site where a permanent setup is installed.
 
-ViMiC incorporates distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption. This makes it relatively CPU-intensive, and ViMiC might require a dedicated computer for spatialization or restrictions on the number of loudspeakers used as compared to DBAP.
+ViMiC incorporates distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption. This makes it relatively CPU-intensive, and ViMiC might require a dedicated computer for spatialization or restrictions on the number of loudspeakers used as compared to other techniques.
 
 For real-time music and sound purposes, the low CPU requirements of matrix-based spatialization techniques make them popular choices. VBAP as well as ambisonics are readily available for use in common software environments for real-time processing such as Max/MSP \cite{Pulkki:2000vbap_max, Schacher:2006ambi_max, Neukom:2008ambipan}, but they require that the listeners are restricted to a relatively small listening area surrounded by loudspeakers arranged in a circle or sphere.  These requirements might be unfeasible or undesired in practical applications.  
 
@@ -209,13 +209,13 @@ In the implementation of DBAP discussed in section \ref{sec:implementation} the 
 
 The model presented so far is not able to cater for sources located outside the field of speakers. As distance to the field increases, the relative difference in distance from source to each of the speakers diminishes, resulting in progressively less difference in levels between the speakers, much the same way as when increasing spatial blur. Additional steps are required to compensate for this.
 
-The \emph{convex hull} of the field of loudspeakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}. It is then determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps needs to be taken. If the source is located outside, the projection of the source onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. The source position is then substituted for its projection in subsequent calculations. In addition, the distance from source to the convex hull is returned. This value can be used for optional added spatial processing such as gain attenuation, air filtering, Doppler effect, or gradual introduction of reverb with increasing distance from the hull.
+The \emph{convex hull} of the field of loudspeakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}. It is then determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps need to be taken. If the source is located outside, the projection of the source onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. The source position is then substituted for its projection in subsequent calculations. In addition, the distance from source to the convex hull is returned. This value can be used for optional added spatial processing such as gain attenuation, air filtering, Doppler effect, or gradual introduction of reverb with increasing distance from the hull.
 
 
 
 \subsection{Extending DBAP by introducing spatial weights}
 
-So far speakers have been dealt with in a transparent manner, without any further considerations for loudspeaker properties apart from position. The extension of DBAP by introduction of a spatial weight $w_{i}$ in equation \ref{eq:inverse_distance} enables a source to be restricted to use a subset of speakers:
+So far speakers have been dealt with in a transparent manner, without any further consideration for loudspeaker properties apart from position. The extension of DBAP by introduction of a spatial weight $w_{i}$ in equation \ref{eq:inverse_distance} enables a source to be restricted to use a subset of speakers:
 
 \begin{equation} \label{eq:inverse_distance_weighed}
 v_{i} = \frac{k w_{i}}{2 d_{i} a} 
@@ -227,9 +227,9 @@ Equation \ref{eq:calculate_k} will now be modified to:
 k = \frac{2a}{\sqrt{\sum_{i=1}^{N} \frac{{w_{i}}^2}{{d_{i}}^2}}}
 \end{equation}
 
-This offer several artistic possibilities. Within the tradition of the Acousmonium \cite{Bayle:1993MusiqueAcousmatique} a large orchestra of speakers is used, organized into instrumental groups according to sonic qualities and characteristics\cite{Prager:2002acousmatique}. Spatial weights can ensure that a source is diffused to one group only. This allows for a timbral and spatial orchestration to be prepared or composed prior to performance, and then adjusted to the specific room used for playback.  In installations or museum spaces spatial weights can also be used to confine sources to restricted areas. One source might be present in one room only while another source is permitted to move between several or all rooms.
+This offers several artistic possibilities : Used with an Acousmonium\footnote{the Acousmonium is a large orchestra of speakers organized into instrumental groups according to sonic qualities and characteristics} \cite{Bayle:1993MusiqueAcousmatique} spatial weights can allow to diffuse several sources to different groups of speakers. This allows a spatial orchestration to be prepared or composed prior to performance, and then adjusted to the specific room used for performance.  In installations or museum spaces spatial weights can also be used to confine sources to restricted areas. One source might be present in one room only while another source is permitted to move between several or all rooms.
 
-Spatial weights can be changed dynamically, thus allowing smooth transitions from one state to another. They can be also used to define different spatial scopes for any loudspeaker, as shown in \ref{fig:5spk_weights}.
+Spatial weights can be changed dynamically, thus allowing smooth transitions from one subset of speakers to another. Moreover, they can be used to define different spatial spreads for each loudspeaker, as shown in figure \ref{fig:5spk_weights}, therefore allowing to create different topologies for each source.
 
 %This weight parameter, after being submitted to listening tests and visualization (as described later in \ref{sec:visual_representation}), has revealed itself as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
 
@@ -265,14 +265,15 @@ A visual representation of the behaviour of the algorithm has been developed, us
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk4_r_6_b_0+nbrs}}
-\caption{{\it Representation of the levels 2D distribution for speaker 4. Parameter values are $6$ dB for roll off, and $0$ for blur. Points represent positions of the 16 speakers}}  
+\caption{{\it Representation of the levels 2D distribution for speaker 4. %Parameter values are $6$ dB for roll off, and $0$ for blur.
+Points represent positions of the 16 speakers}}  
 \label{fig:1spk}
 \end{figure}
 
 % Does this look better ?
 % Tim says 'yes, good enough for now'
 
-The method for creating this visualization consists in creating a graphical map of level response for each loudspeaker as a 2D matrix of levels. For each pixel of this matrix, the pixel value is set to the squared amplitude returned by the dbap algorithm if the source was located at this position. The visual result in figure \ref{fig:1spk} indicates the spatial response for one of the loudspeakers. The lighter pixels are positions where amplitudes are close to $1$ and the darker ones are positions where amplitudes are close to $0$. As expected, the further away the source is from the loudspeaker, the lower the amplitude. 
+The method for creating this visualization consists in creating a graphical map of level response for each loudspeaker as a 2D matrix of levels. For each pixel of this matrix, the pixel value is set to the squared amplitude returned by the DBAP algorithm if the source was located at this position. The visual result in figure \ref{fig:1spk} indicates the spatial response for one of the loudspeakers. The lighter pixels are positions where amplitudes are close to $1$ and the darker ones are positions where amplitudes are close to $0$. As expected, the further away the source is from the loudspeaker, the lower the amplitude. 
 %However the presence of holes in the spatial distribution of the amplitude response illustrates how the DBAP algorithm works when a source moves between several loudspeakers.
 %This part above isn't really necessary
 
@@ -286,16 +287,16 @@ The method for creating this visualization consists in creating a graphical map 
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{all_r_6_b_0}}
-\caption{{\it Representation of the 2D distribution of levels for all speakers. Parameter values are 6 dB for rolloff, and 0 for blur}}  
+\caption{{\it Representation of the 2D distribution of levels for all speakers. 
+%Parameter values are 6 dB for rolloff, and 0 for blur
+}}  
 \label{fig:allspk2}
 \end{figure}
-
 %\begin{figure}[ht]
 %\centerline{\includegraphics[scale=0.5]{all_r_6_b_0_2}}
 %\caption{{\it Representation of the 2D distribution of levels for all speakers. Parameter values are 6 dB for rolloff, and 0.2 for blur}}  
 %\label{fig:allspk3}
 %\end{figure}
-
 A visualization of the response ranges for all speakers can be created by combining all figures of the same class as in fig. \ref{fig:1spk}, and then finding the maximum amplitude for a given 2D-position. The graphical result, as in \ref{fig:allspk2}, shows segmented parts in space corresponding to every spatial zone of predominance for each loudspeaker. Here the darker pixels have to be explained as positions where the source is mixed equally between the closest loudspeakers. %Figures \ref{fig:allspk1}, \ref{fig:allspk2} and \ref{fig:allspk3} illustrate several combinations of varying roll off and blur values. 
 
 \begin{figure}[ht]
@@ -303,9 +304,7 @@ A visualization of the response ranges for all speakers can be created by combin
 \caption{{\it Representation of the 2D distribution of levels for 5 speakers only, with weights $[1.5,1.,1.,1.,0.75,1.2]$ for speakers $[5,8,9,10,11,12]$}}  
 \label{fig:5spk_weights}
 \end{figure}
-
 % Figure \ref{fig:5spk_weights} illustrates a weights preset that keeps only five loudspeakers set with different weights for each of them.
-
 These pictures are generated in realtime by the algorithm, and can thus be used as a user-interface for source positioning and DBAP parameters setting, e.g. as back drops for mouse interaction, or even better for tactile-screen interaction.
 
 
@@ -314,11 +313,14 @@ These pictures are generated in realtime by the algorithm, and can thus be used 
 
 DBAP offers a light-weight panning-based solution for spatialization for irregular loudspeaker layouts. The Jamoma module implementation makes DBAP available with a similar interface as other Jamoma modules for rendering spatial sound, enabling various techniques to be interchanged and compared. %Jamoma also offers a more advanced spatialization technique that can be used for irregular loudspeaker layouts, ViMiC, incorporating distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption \cite{Peters:2008vimic}. ViMiC is more CPU-intensive, and might require a dedicated computer for spatialization or limitations on the number of loudspeakers used as compared to DBAP.
 
-Implementation of convex hulls and spatial weights remains to be done for three-dimensional loudspeaker layouts. If spatial weights are used to define subspaces of speakers, it also remains to be investigated if and how the implementation of convex hulls can be dynamically reconfigured.
+Implementation of convex hulls and spatial weights remains to be combined (in the case of speakers subsets), and extended for three-dimensional loudspeaker layouts. 
+%If spatial weights are used to define subspaces of speakers, it also remains to be investigated if and how the implementation of convex hulls can be dynamically reconfigured.
 
 %In this paper DBAP has been discussed for spatialization to a static layout of speakers. For gaming applications the speaker layout relative to the player could be defined, and then the actual speaker layout could be changed dynamically as the gamer moves through the virtual world of the game.
 
-DBAP can also be used as a solution for dynamic routing of input sources to a spatial layout of effect processes. Instead of defining loudspeaker positions, the effects could be assigned positions in two or more spaces. The idea of having sources traverse a space of effects would resemble e.g. the work by \cite{Momeni:2003hipnoscope}. 
+DBAP can also be used as a solution for dynamic routing of input sources to a spatial layout of effect processes. Instead of defining loudspeaker positions, the effects could be assigned positions in two or more spaces, similarly to
+%. The idea of having sources traverse a space of effects would resemble e.g. the work by 
+\cite{Momeni:2003hipnoscope}. 
 %A project for designing multi-touch graphical interfaces to intuitively interact with DBAP has been initiated.
 
 
