fixed some typos and added a frame to the screencap of Figure 2
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5157 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -302,7 +302,7 @@ The ICST Ambisonics Tools comprise a set of four externals for Max/MSP \cite{Sch
 
 \indent The two externals ambimonitor and ambicontrol complete the set as control tools for the Authoring Layer. Ambimonitor presents the user with a GUI displaying point sources in an abstract 2D or 3D space, various key commands, snapshot and file I/O capabilities and it generates coordinate information for the DSP objects. Ambicontrol provides a number of methods that control motion of points in the ambimonitor's dataset. Automated motions such as rotation, random motion, optionally constrained in bounding volumes and user defined trajectories can be applied to single or grouped points. Trajectories and state snapshots can be imported/exported  as a XML file, which will be replaced by a SpatDIF compliant formatting in a next release.
 
-\indent A novel panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonics decoding and implemented as a Max/MSP external entitled ambipanning$\sim$. It encapsulates the Encoding and Decoding Layer by transcoding a set of mono sources in one process onto an ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply individually varying directivity responses. This external understands the same Render Instructions and is therefore interchangeable with the two ICST Ambisonics Tools DSP objects. 
+\indent A novel panning algorithm \cite{Neukom:2008ambipan} was derived from in-phase ambisonics decoding and implemented as a Max/MSP external entitled ambipanning$\sim$. It encapsulates the Encoding and Decoding Layer by transcoding a set of mono sources in one process onto an ideally circular speaker setup with an arbitrary number of speakers. The algorithm works with a continuous order factor, which permits to apply individually varying directivity responses. This external understands the same Render Instructions and is therefore interchangeable with ambiencode$\sim$ and ambidecode$\sim$. 
 %
 \subsection{Jamoma}
 
@@ -314,7 +314,7 @@ A number of Jamoma modules have been developed for converting multichannel signa
 
 Ambisonics is the only spatialization method implemented in Jamoma that separates spatial encoding and decoding. 1st to 3rd order encoding of mono sources is implemented using the ICST externals\cite{Schacher:2006ambi_max}. Other modules are available for super stereo encoding, encoding of tracks from the portable Zoom H2 recorder and for encoding of UHJ signals. Encoded signals can be manipulated, e.g. the balance between the encoded channels can be adjusted, or the encoded signal can be rotated, tilted and tumbled. The decoding module for 1st to 3rd order signals use the ICST externals while a module for binaural decoding use Spatialisateur \cite{JotPhD}. B-format signals can also be decoded to UHJ.
 
-Jamoma supports several other other popular spatialization algorithms: VBAP \cite{Pulkki:2000vbap_max}, ViMiC \cite{CMJ08-VIMIC} and DBAP \cite{dbapICMC09}. Prior to rendering, additional modules offers Doppler, air absorption and distance attenuation source pre-prosessing. 
+Jamoma supports several other popular spatialization algorithms: VBAP \cite{Pulkki:2000vbap_max}, ViMiC \cite{CMJ08-VIMIC} and DBAP \cite{dbapICMC09}. Prior to rendering, additional modules offers Doppler, air absorption and distance attenuation source pre-prosessing. 
 
 All modules operating at the Encoding Layer are SpatDIF-compliant and hence provides the same interface to controlling modules operating at higher layers. 
 
@@ -332,7 +332,7 @@ This standalone application uses the timeline paradigm found in traditional DAWs
 
 An important feature of Holo-Edit is the ability to display the waveform representation of a sound next to its associated trajectory. This allows precisely alignment of sound cues to desired movements.
 %Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO: I changed something here, but I don't know what you really mean] [ FIXED BY CHARLES : I wanted to point that the movements composed are not made to be strongly linked with the scales of our physical world. But we can absolutly erase this line as it's not fundamental, was just a note ]
-Holo-Edit uses OSC to communicate with various media programming environments presented in section \ref{sec:Media programming environments} and control various spatialization methods and AVEs. A major challenge in these scenarios is to adapt and format the data stream that fits the specific rendering algorithm syntax (e.g. coordinate system, dimensions, units).
+Holo-Edit uses OSC to communicate with media programming environments presented in section \ref{sec:Media programming environments} to control various spatialization methods and AVEs. A major challenge in these scenarios is to adapt and format the data stream that fits the specific rendering algorithm syntax (e.g. coordinate system, dimensions, units).
 
 To overcome this challenge, a Holo-Edit communication interface was developed for the Jamoma environment that handles sound file playback and position data of loudspeakers and sound sources through its standardized OSC-namespace. Therefore, Holo-edit can be used as the main authoring tool for spatialization, while all DSP audio processes are executed in Jamoma. The communication between Holo-Edit and Jamoma is full-duplex, thus allows also to record trajectories in Holo-Edit from any real-time control interface addressable through Jamoma.
 %
@@ -357,7 +357,7 @@ To overcome this challenge, a Holo-Edit communication interface was developed fo
 We propose a multi-layer approach to mediate across essential components involved in sound spatialization. The examples of work on spatialization done at ICST and in Jamoma and HoloEdit illustrates that a layered model can be fruitful for development within media programming environments.
      
 
-An informal discussion after an ICMC 2008 panel discussion on interchange formats for spatial audio scenes\footnote{\scriptsize{\url{http://redmine.spatdif.org/wiki/spatdif/Belfast_2008}}} revealed that adequate spatialization tools for working in DAWs are strongly desired. The question remains whether this demand can be accommodated by employing the multi-layer approach in DAWs. It remains to be researched how and if a similar layered approach could also be adapted and become fruitful in DAWs. A potential limitation might be imposed by the fact that automation in DAWs generally is represented as timetagged streams of one-dimensional values while spatial information is generally multi-dimensional.
+An informal discussion after an ICMC 2008 panel discussion on interchange formats for spatial audio scenes\footnote{\scriptsize{\url{http://redmine.spatdif.org/wiki/spatdif/Belfast_2008}}} revealed that adequate spatialization tools for working in DAWs are strongly desired. The question remains whether this demand can be accommodated by employing the multi-layer approach in DAWs. It remains to be researched how and if a similar layered approach could also be adapted and become fruitful in DAWs. A potential limitation might be imposed by the fact that automation in DAWs generally is represented as time-tagged streams of one-dimensional values while spatial information is generally multi-dimensional.
 
 
 Several stand-alone applications are designed with a similar layered approach that allows to control different spatial rendering algorithms from one common interface, e.g. \cite{geier2008ssr}. Artists and researcher would benefit greatly if all these ``local solutions" could be accessed by any desired authoring tool and integrated into existing environments. 
@@ -397,7 +397,7 @@ One keystone may be to define a meaningful and accepted interchange communicatio
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Acknowledgment}
-The concepts proposed in this paper was to a large degree developed during a workshop at Gmea Centre National de Cr\'eation Musicale as part of the Virage research platform funded by the French National Agency for Research. This work is also partly funded by the Canadian Natural Sciences and Engineering Research Council (NSERC), the Canada Council for the Arts, The COST IC0601 Action on Sonic Interaction Design (SID) and the Municipality of Bergen.
+The concepts proposed in this paper were to a large degree developed during a workshop at GMEA Centre National de Cr\'eation Musicale as part of the Virage research platform funded by the French National Agency for Research. This work is also partly funded by the Canadian Natural Sciences and Engineering Research Council (NSERC), the Canada Council for the Arts, The COST IC0601 Action on Sonic Interaction Design (SID) and the Municipality of Bergen.
 
 
 \bibliographystyle{abbrv}  %\bibliographystyle{natbib}% ama, nar, alpha, plain, chicago,{plainnat}  abbrv, siam   
