--- a/Papers/ICMC2009-dbap/icmc2009-dbapShort.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbapShort.tex
@@ -91,11 +91,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-
-% TODO: Tim notes the use of the phrase "in terms of" a lot in this paper.  Too much.  This terminology should be limited to mathematical descriptions, and not aesthetic or perceptual issues.
-
 \begin{abstract}
-Most common techniques for spatialization require the listener to be positioned at a ``sweet spot'' surrounded by loudspeakers. For practical concert, stage and installation applications such layouts may not be desirable. Distance-Based Amplitude Panning (DBAP) offers an alternative panning based spatialization method where no assumptions are made concerning the layout of the speaker array nor the position of the listener.  DBAP is implemented both as an external for Max/MSP and as a module for the Jamoma framework.
+Most common techniques for spatialization require the listener to be positioned at a ``sweet spot'' surrounded by loudspeakers. For practical concert, stage, and installation applications such layouts may not be desirable. Distance-Based Amplitude Panning (DBAP) offers an alternative panning-based spatialization method where no assumptions are made concerning the layout of the speaker array nor the position of the listener.  DBAP is implemented both as an external for Max/MSP and as a module for the Jamoma Modular framework.
 \end{abstract}
 
 
@@ -114,17 +111,17 @@ Most common techniques for spatialization require the listener to be positioned 
 
 \section{Introduction}\label{sec:introduction}
 
-Multichannel and surround sound reproduction is getting common, for consumer applications as well as for musical and artistic purposes. A number of spatialization techniques exist for virtual positioning of sound sources using an array of loudspeakers. These often assume that the position of the listener is known and fixed, and that the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialization techniques are stereo panning, ITU 5.1 surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap} and first- and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
+Multichannel and surround sound reproduction is becoming common for both consumer applications as well as musical and artistic purposes. A number of spatialization techniques exist for virtual positioning of sound sources using an array of loudspeakers. These often assume that the position of the listener is known and fixed, and that the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialization techniques are stereo panning, ITU 5.1 surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap}, and first- and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
 
 Wave field synthesis (WFS) and Virtual Microphone Control (ViMiC) \cite{Peters:2008vimic} are noticeable exceptions to the aforementioned ``sweet spot'' restriction.
 
-WFS reproduces signals in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}. Due to the high number of loudspeakers required, WFS might be impractical to use for financial reasons and time constraints unless one is working on a site where a permanent setup is installed.
+WFS reproduces signals in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrarily large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}. Due to the high number of loudspeakers required, WFS might be impractical to use for financial reasons and time constraints unless one is working on a site where a permanent setup resides.
 
-ViMiC incorporates distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption. This makes it relatively CPU-intensive, and ViMiC might require a dedicated computer for spatialization or restrictions on the number of loudspeakers used as compared to other techniques.
+ViMiC incorporates distance-based signal delays between speakers, simulation of microphone patterns, early reflections, and surface absorption. This makes it relatively CPU-intensive.  Thus ViMiC may require a dedicated computer for spatialization or restrictions on the number of loudspeakers used as compared to other techniques.
 
-For real-time music and sound purposes, the low CPU requirements of matrix-based spatialization techniques make them popular choices. VBAP as well as ambisonics are readily available for use in common software environments for real-time processing such as Max/MSP \cite{Pulkki:2000vbap_max, Schacher:2006ambi_max, Neukom:2008ambipan}, but they require that the listeners are restricted to a relatively small listening area surrounded by loudspeakers arranged in a circle or sphere.  These requirements might be unfeasible or undesired in practical applications.  
+For real-time music and sound purposes, the low CPU requirements of matrix-based spatialization techniques make them popular choices. VBAP as well as ambisonics are readily available for use in common software environments for real-time processing such as Max/MSP \cite{Pulkki:2000vbap_max, Schacher:2006ambi_max, Neukom:2008ambipan}, but they require that the listeners are restricted to a relatively small listening area surrounded by loudspeakers arranged in a circle or sphere.  These requirements may not be feasible or desired in practical applications.  
 
-Distance-based amplitude panning (DBAP) is a matrix-based spatialization technique that takes the actual positions of the speakers in space as the point of departure, while making no assumptions as to where the listeners are situated. This makes DBAP useful for a number of real-world situations such as concerts, stage productions, installations\cite{lossius:2008installations} and museum sound design where predefined geometric speaker layouts might not apply.
+Distance-based amplitude panning (DBAP) is a matrix-based spatialization technique that takes the actual positions of the speakers in space as the point of departure, while making no assumptions as to where the listeners are situated. This makes DBAP useful for a number of real-world situations such as concerts, stage productions, installations\cite{lossius:2008installations}, and museum sound design where predefined geometric speaker layouts may not apply.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -138,7 +135,7 @@ Distance-based amplitude panning (DBAP) is a matrix-based spatialization techniq
 \subsection{Fundamentals}
 
 \textit{Distance-based amplitude panning (DBAP)} extends the principle of equal intensity panning from a pair of speakers to a loudspeaker array of any size, with no \textit{a priori} assumptions about their positions in space or relative to each other.
-For simplicity, the method will be discussed for a two-dimensional model. This can be readily extended to three dimensions.
+For simplicity, the method will be discussed using a two-dimensional model. This can be readily extended to three dimensions.
 
 The Cartesian coordinates of a virtual source is given as $(x_{s}, y_{s})$. For a model with $N$ speakers, the position of the $i$th speaker is given as $(x_{i}, y_{i})$. The distance $d_{i}$ from a source to each of the speakers is
 
@@ -146,7 +143,7 @@ The Cartesian coordinates of a virtual source is given as $(x_{s}, y_{s})$. For 
 d_{i} = \sqrt{ {(x_{i} - x_{s})}^2 + {(y_{i} - y_{s})}^2 } \qquad \textrm{for } 1 \leq i \leq N \textrm{ .}
 \end{equation}
 
-For simplicity, the source is presumed as having unity amplitude. DBAP then makes two assumptions. The first is that intensity is to be constant regardless of the position of the virtual source. This can be considered an extension to multiple channels of the principle of constant intensity stereo panning. If the amplitude of the $i$th speaker is $v_{i}$, this implies
+For simplicity, the source is presumed as having unity amplitude. DBAP then makes two assumptions. The first is that intensity is to be constant regardless of the position of the virtual source. This can be considered an extension of the principle of constant intensity stereo panning to multiple channels. If the amplitude of the $i$th speaker is $v_{i}$, this implies
 
 \begin{equation} \label{eq:constant_intensity}
 I = \sum_{i=1}^{N} {v_{i}}^2 = 1 \textrm{ .}
@@ -207,15 +204,15 @@ In the implementation of DBAP discussed in section \ref{sec:implementation} the 
 
 \subsection{Sources positioned outside the field of speakers}
 
-The model presented so far is not able to cater for sources located outside the field of speakers. As distance to the field increases, the relative difference in distance from source to each of the speakers diminishes, resulting in progressively less difference in levels between the speakers, much the same way as when increasing spatial blur. Additional steps are required to compensate for this.
+The model presented so far is not able to cater for sources located outside the field of speakers. As distance to the field increases, the relative difference in distance from source to each of the speakers diminishes, resulting in progressively less difference in levels between the speakers, much the same way as when increasing spatial blur. Compensating for this requires additional calculations.
 
-The \emph{convex hull} of the field of loudspeakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}. It is then determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps need to be taken. If the source is located outside, the projection of the source onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. The source position is then substituted for its projection in subsequent calculations. In addition, the distance from source to the convex hull is returned. This value can be used for optional added spatial processing such as gain attenuation, air filtering, Doppler effect, or gradual introduction of reverb with increasing distance from the hull.
-
+First, the \emph{convex hull} of the field of loudspeakers is calculated. In two dimensions the convex hull ``is the shape taken by a rubber band stretched around nails bounded into the plane at each point'' \cite{Rourke:1998_geometry}. It is then determined if the source is outside the hull or not. If it is inside or on the boundary no additional steps need to be taken. If the source is located outside, then the projection of the source onto the boundary of the hull is calculated, defined as the point on the boundary with the shortest possible distance to the source. This source position is  substituted for its projection in subsequent calculations. In addition, the distance from source to the convex hull is returned. This value can be used for optional added spatial processing such as gain attenuation, air filtering, Doppler effect, or gradual introduction of reverb with increasing distance from the hull.
 
 
 \subsection{Extending DBAP by introducing spatial weights}
 
-So far speakers have been dealt with in a transparent manner, without any further consideration for loudspeaker properties apart from position. The extension of DBAP by introduction of a spatial weight $w_{i}$ in equation \ref{eq:inverse_distance} enables a source to be restricted to use a subset of speakers:
+% CHANGED: Tim changed this next sentence.  He doesn't think the new form is great, but its a lot better than it was...
+In its purest sense, DBAP deals with speakers in a transparent manner, without any further consideration for loudspeaker properties apart from position. The extension of DBAP by introduction of a spatial weight $w_{i}$ in equation \ref{eq:inverse_distance} enables a source to be restricted to use a subset of speakers:
 
 \begin{equation} \label{eq:inverse_distance_weighed}
 v_{i} = \frac{k w_{i}}{2 d_{i} a} 
@@ -227,9 +224,9 @@ Equation \ref{eq:calculate_k} will now be modified to:
 k = \frac{2a}{\sqrt{\sum_{i=1}^{N} \frac{{w_{i}}^2}{{d_{i}}^2}}}
 \end{equation}
 
-This offers several artistic possibilities : Used with an Acousmonium\footnote{the Acousmonium is a large orchestra of speakers organized into instrumental groups according to sonic qualities and characteristics} \cite{Bayle:1993MusiqueAcousmatique} spatial weights can allow to diffuse several sources to different groups of speakers. This allows a spatial orchestration to be prepared or composed prior to performance, and then adjusted to the specific room used for performance.  In installations or museum spaces spatial weights can also be used to confine sources to restricted areas. One source might be present in one room only while another source is permitted to move between several or all rooms.
+This offers several artistic possibilities : Used with an Acousmonium\footnote{the Acousmonium is a large orchestra of speakers organized into instrumental groups according to sonic qualities and characteristics} \cite{Bayle:1993MusiqueAcousmatique} spatial weights can allow one to diffuse several sources to different groups of speakers. This permits a spatial orchestration to be prepared or composed prior to performance, and then adjusted to the specific room used for performance.  In installations or museum spaces spatial weights can also be used to confine sources to restricted areas. One source might be present in one room only while another source is permitted to move between several or all rooms.
 
-Spatial weights can be changed dynamically, thus allowing smooth transitions from one subset of speakers to another. Moreover, they can be used to define different spatial spreads for each loudspeaker, as shown in figure \ref{fig:5spk_weights}, therefore allowing to create different topologies for each source.
+Spatial weights can be changed dynamically, thus allowing smooth transitions from one subset of speakers to another. Moreover, they can be used to define different spatial spreads for each loudspeaker, as shown in figure \ref{fig:5spk_weights}. Therefore, spatial weighting enables one to create independent topologies for each source.
 
 %This weight parameter, after being submitted to listening tests and visualization (as described later in \ref{sec:visual_representation}), has revealed itself as being more of a spatial weight for each loudspeaker, or rather a spatial ``sharpness'' of the localization of each loudspeaker. This parameter, though, needs further research and listening tests, in laboratory and artistic contexts for a better understanding of its perceptual effect.
 
@@ -248,7 +245,7 @@ Spatial weights can be changed dynamically, thus allowing smooth transitions fro
 \subsection{Implementation}
 \label{sec:implementation}
 
-DBAP is implemented as an external for the real-time multimedia graphical environment Max/MSP, written in C as part of the Jamoma library and framework \cite{Place:2006jamoma}. The external supports several independent sources. Input gain for each source can be controlled prior to the DBAP processing, and sources can be muted.  In addition a Jamoma DBAP module is developed with a similar interface as other Jamoma spatialization modules for e.g. VBAP and ambisonics, according to the SpatDIF initiative \cite{Peters:2008spatdif}.
+DBAP is implemented as an external for the real-time multimedia graphical environment Max/MSP, written in C as part of the Jamoma library and framework \cite{Place:2006jamoma}. The external supports several independent sources. Input gain for each source can be controlled prior to the DBAP processing and sources can be muted.  In addition, a Jamoma DBAP module is developed with a similar interface as other Jamoma spatialization modules (e.g. VBAP and ambisonics) according to the SpatDIF initiative \cite{Peters:2008spatdif}.
 
 
 
@@ -261,7 +258,7 @@ DBAP is implemented as an external for the real-time multimedia graphical enviro
 %\label{speaker_positions}
 %\end{figure}
 
-A visual representation of the behaviour of the algorithm has been developed, using gradients to illustrate the ``predominance'' zone of each speaker. This is also intended to offer intuitive interactive manipulation of source positions and parameters such as spatial blur, rolloff and spatial weights.
+A visual representation of the behavior of the algorithm has been developed, using gradients to illustrate the ``predominance'' zone of each speaker. This is also intended to offer intuitive interactive manipulation of source positions and parameters such as spatial blur, rolloff and spatial weights.
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk4_r_6_b_0+nbrs}}
@@ -273,7 +270,7 @@ Points represent positions of the 16 speakers}}
 % Does this look better ?
 % Tim says 'yes, good enough for now'
 
-The method for creating this visualization consists in creating a graphical map of level response for each loudspeaker as a 2D matrix of levels. For each pixel of this matrix, the pixel value is set to the squared amplitude returned by the DBAP algorithm if the source was located at this position. The visual result in figure \ref{fig:1spk} indicates the spatial response for one of the loudspeakers. The lighter pixels are positions where amplitudes are close to $1$ and the darker ones are positions where amplitudes are close to $0$. As expected, the further away the source is from the loudspeaker, the lower the amplitude. 
+The method for creating this visualization consists in creating a graphical map of level response for each loudspeaker as a 2D matrix of levels. For each pixel of this matrix, the pixel value is set to the squared amplitude returned by the DBAP algorithm if the source was located at this position. The visual result in figure \ref{fig:1spk} indicates the spatial response for one of the loudspeakers. The lighter pixels are positions where amplitudes are close to $1$ and the darker pixels are positions where amplitudes are close to $0$. As expected, the further away the source is from the loudspeaker the lower the amplitude. 
 %However the presence of holes in the spatial distribution of the amplitude response illustrates how the DBAP algorithm works when a source moves between several loudspeakers.
 %This part above isn't really necessary
 
@@ -305,13 +302,12 @@ A visualization of the response ranges for all speakers can be created by combin
 \label{fig:5spk_weights}
 \end{figure}
 % Figure \ref{fig:5spk_weights} illustrates a weights preset that keeps only five loudspeakers set with different weights for each of them.
-These pictures are generated in realtime by the algorithm, and can thus be used as a user-interface for source positioning and DBAP parameters setting, e.g. as back drops for mouse interaction, or even better for tactile-screen interaction.
-
+These pictures are generated in realtime by the algorithm, and may serve as a user-interface for source positioning and DBAP parameter setting.  Examples of this include use as back drops for mouse interaction or tactile-screen interaction.
 
 
 \section{Conclusions and further work}
 
-DBAP offers a light-weight panning-based solution for spatialization for irregular loudspeaker layouts. The Jamoma module implementation makes DBAP available with a similar interface as other Jamoma modules for rendering spatial sound, enabling various techniques to be interchanged and compared. %Jamoma also offers a more advanced spatialization technique that can be used for irregular loudspeaker layouts, ViMiC, incorporating distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption \cite{Peters:2008vimic}. ViMiC is more CPU-intensive, and might require a dedicated computer for spatialization or limitations on the number of loudspeakers used as compared to DBAP.
+DBAP offers a light-weight panning-based solution for spatialization using irregular loudspeaker layouts. The Jamoma module implementation makes DBAP available with an interface similar to other Jamoma modules for rendering spatial sound, enabling various techniques to be interchanged and compared. %Jamoma also offers a more advanced spatialization technique that can be used for irregular loudspeaker layouts, ViMiC, incorporating distance-based signal delays between speakers, simulation of microphone patterns, early reflections and surface absorption \cite{Peters:2008vimic}. ViMiC is more CPU-intensive, and might require a dedicated computer for spatialization or limitations on the number of loudspeakers used as compared to DBAP.
 
 Implementation of convex hulls and spatial weights remains to be combined (in the case of speakers subsets), and extended for three-dimensional loudspeaker layouts. 
 %If spatial weights are used to define subspaces of speakers, it also remains to be investigated if and how the implementation of convex hulls can be dynamically reconfigured.
