Updating template files and fixing layout issues. Aaarrrrgggh, we are now 5 pages again...
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5223 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbapShort.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbapShort.tex
@@ -256,7 +256,7 @@ DBAP is implemented as an external for the real-time multimedia graphical enviro
 
 %\begin{figure}[ht]
 %\centerline{\includegraphics[scale=0.8]{LoudspeakerPositions}}
-%\caption{{\it Points represent positions of the 16 speakers used in the examples below}}
+%\caption{Points represent positions of the 16 speakers used in the examples below.}
 %\label{speaker_positions}
 %\end{figure}
 
@@ -264,8 +264,7 @@ A visual representation of the behavior of the algorithm has been developed, usi
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk4_r_6_b_0+nbrs}}
-\caption{{\it Representation of the levels 2D distribution for speaker 4. %Parameter values are $6$ dB for roll off, and $0$ for blur.
-Points represent positions of the 16 speakers}}  
+\caption{{Representation of the levels 2D distribution for speaker 4. Points represent positions of the 16 speakers.}}  
 \label{fig:1spk}
 \end{figure}
 
@@ -280,15 +279,13 @@ The method for creating this visualization consists in creating a graphical map 
 
 %\begin{figure}[ht]
 %\centerline{\includegraphics[scale=0.5]{all_r_2_b_0}}
-%\caption{{\it Representation of the 2D distribution of levels for all speakers. Parameter values are 2 dB for rolloff, and 0 for blur}}  
+%\caption{{Representation of the 2D distribution of levels for all speakers. Parameter values are 2 dB for rolloff, and 0 for blur.}}  
 %\label{fig:allspk1}
 %\end{figure}
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{all_r_6_b_0}}
-\caption{{\it Representation of the 2D distribution of levels for all speakers. 
-%Parameter values are 6 dB for rolloff, and 0 for blur
-}}  
+\caption{Representation of the 2D distribution of levels for all speakers.}  
 \label{fig:allspk2}
 \end{figure}
 %\begin{figure}[ht]
@@ -300,7 +297,7 @@ A visualization of the response ranges for all speakers can be created by combin
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.5]{spk_groups+nbrs}}
-\caption{{\it Representation of the 2D distribution of levels for 5 speakers only, with weights $[1.5,1.,1.,1.,0.75,1.2]$ for speakers $[5,8,9,10,11,12]$}}  
+\caption{Representation of the 2D distribution of levels for 5 speakers only, with weights $[1.5,1.,1.,1.,0.75,1.2]$ for speakers $[5,8,9,10,11,12]$.}
 \label{fig:5spk_weights}
 \end{figure}
 % Figure \ref{fig:5spk_weights} illustrates a weights preset that keeps only five loudspeakers set with different weights for each of them.
